# ni-mano

./: .drone.yml  .gitignore  README.md  install_reqs_all.sh  install_reqs_dev.sh  install_reqs_tests.sh  requirements_modules.txt  requirements_ni_clients.txt  requirements_ni_tests.txt  secret.txt.example
kafka_extractor/: README.md  __main__.py  (+4 more)
ni_horizon/: README.md  requirements-dev.txt  requirements.txt  setup.cfg
ni_horizon/ni_horizon/enabled/: _50_ni_mano.py
ni_horizon/ni_horizon/openstack_dashboard/api/: ni_mano.py
ni_horizon/ni_horizon/openstack_dashboard/api/config/: config.yaml.example
ni_horizon/ni_horizon/openstack_dashboard/dashboards/ni_mano/: dashboard.py
ni_horizon/ni_horizon/openstack_dashboard/dashboards/ni_mano/links/: panel.py  tables.py  urls.py  views.py
ni_horizon/ni_horizon/openstack_dashboard/dashboards/ni_mano/nodes/: panel.py  tables.py  urls.py  views.py
ni_horizon/ni_horizon/openstack_dashboard/dashboards/ni_mano/sfcrs/: forms.py  panel.py  tables.py  urls.py  views.py
ni_horizon/ni_horizon/openstack_dashboard/dashboards/ni_mano/sfcs/: forms.py  panel.py  tables.py  urls.py  views.py
ni_horizon/ni_horizon/openstack_dashboard/dashboards/ni_mano/templates/ni_mano/: _base.html  _scripts.html
ni_horizon/ni_horizon/openstack_dashboard/dashboards/ni_mano/topos/: panel.py  urls.py  views.py
ni_horizon/ni_horizon/openstack_dashboard/dashboards/ni_mano/vnfflavors/: panel.py  tables.py  urls.py  views.py
ni_horizon/ni_horizon/openstack_dashboard/dashboards/ni_mano/vnfinstances/: forms.py  panel.py  tables.py  urls.py  views.py
(+184 files in other folders)
