[metadata]
name = ni_horizon
summary = Tacker extension for Horizon
description-file = README.md
author = tu-nv
author-email = vantu.bkhn@gmail.com
home-page = http://dpnm.postech.ac.kr/home
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages = ni_horizon
namespace_packages = ni_horizon
